updated notebook comment

--- a/2.1 fnn/FNNMain.ipynb
+++ b/2.1 fnn/FNNMain.ipynb
@@ -490,7 +490,7 @@
     "id": "UPvjarqo8cis"
    },
    "source": [
-    "# Training the model"
+    "# Training the model and evaluating on val set"
    ]
   },
   {
@@ -584,7 +584,37 @@
       "Training Iteration 2000 of epoch 3 complete. Loss: 4.593973159790039; Acc:0.17142857611179352; Time taken (s): 9.682697057723999\n",
       "Training Iteration 2500 of epoch 3 complete. Loss: 4.630977153778076; Acc:0.20000000298023224; Time taken (s): 9.610487461090088\n",
       "Training Iteration 3000 of epoch 3 complete. Loss: 4.368292808532715; Acc:0.34285715222358704; Time taken (s): 9.611170291900635\n",
-      "Training Iteration 3500 of epoch 3 complete. Loss: 5.396360874176025; Acc:0.1428571492433548; Time taken (s): 9.695338010787964\n"
+      "Training Iteration 3500 of epoch 3 complete. Loss: 5.396360874176025; Acc:0.1428571492433548; Time taken (s): 9.695338010787964\n",
+      "Training Iteration 4000 of epoch 3 complete. Loss: 4.145041465759277; Acc:0.2857142984867096; Time taken (s): 9.762323141098022\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Iteration 4500 of epoch 3 complete. Loss: 3.4208340644836426; Acc:0.3142857253551483; Time taken (s): 9.53130555152893\n",
+      "Training Iteration 5000 of epoch 3 complete. Loss: 4.174997806549072; Acc:0.20000000298023224; Time taken (s): 9.646984577178955\n",
+      "Training Iteration 5500 of epoch 3 complete. Loss: 3.7479069232940674; Acc:0.4000000059604645; Time taken (s): 9.560098886489868\n",
+      "Training Iteration 6000 of epoch 3 complete. Loss: 2.9953224658966064; Acc:0.4571428596973419; Time taken (s): 9.545814037322998\n",
+      "Training Iteration 6500 of epoch 3 complete. Loss: 4.420825004577637; Acc:0.2571428716182709; Time taken (s): 9.632787227630615\n",
+      "Training Iteration 7000 of epoch 3 complete. Loss: 3.613224506378174; Acc:0.2857142984867096; Time taken (s): 9.66140079498291\n",
+      "\n",
+      "--- Evaluating model on dev data ---\n",
+      "Dev Iteration 0 complete. Mean Loss: 6.813724994659424; Mean Acc:0.17142857611179352; Time taken (s): 1.2915005683898926\n",
+      "Dev Iteration 500 complete. Mean Loss: 7.575576219730035; Mean Acc:0.13384640216827393; Time taken (s): 0.8450355529785156\n",
+      "Epoch 3 complete! Development Accuracy: 0.13075865805149078; Development Loss: 7.630470116524586\n",
+      "\n",
+      "--- Training model Epoch: 5 ---\n",
+      "Training Iteration 0 of epoch 4 complete. Loss: 3.8694746494293213; Acc:0.2571428716182709; Time taken (s): 0.02000260353088379\n",
+      "Training Iteration 500 of epoch 4 complete. Loss: 3.2360053062438965; Acc:0.4571428596973419; Time taken (s): 9.584366798400879\n",
+      "Training Iteration 1000 of epoch 4 complete. Loss: 3.2982823848724365; Acc:0.34285715222358704; Time taken (s): 9.541854858398438\n",
+      "Training Iteration 1500 of epoch 4 complete. Loss: 3.8275704383850098; Acc:0.2857142984867096; Time taken (s): 9.484915971755981\n",
+      "Training Iteration 2000 of epoch 4 complete. Loss: 3.5661375522613525; Acc:0.34285715222358704; Time taken (s): 9.522655963897705\n",
+      "Training Iteration 2500 of epoch 4 complete. Loss: 4.11310338973999; Acc:0.2571428716182709; Time taken (s): 9.578406810760498\n",
+      "Training Iteration 3000 of epoch 4 complete. Loss: 3.466590404510498; Acc:0.37142857909202576; Time taken (s): 9.694475650787354\n",
+      "Training Iteration 3500 of epoch 4 complete. Loss: 4.725275039672852; Acc:0.20000000298023224; Time taken (s): 9.667410850524902\n",
+      "Training Iteration 4000 of epoch 4 complete. Loss: 3.718966245651245; Acc:0.34285715222358704; Time taken (s): 9.535159349441528\n",
+      "Training Iteration 4500 of epoch 4 complete. Loss: 3.1910104751586914; Acc:0.37142857909202576; Time taken (s): 9.540820121765137\n"
      ]
     }
    ],
